Interpreter 0.3 builds and before debugging

--- a/TKOM-Fish/CMakeLists.txt
+++ b/TKOM-Fish/CMakeLists.txt
@@ -18,8 +18,9 @@ file(GLOB S_ANALIZATOR "source/Analizator/*.cpp")
 file(GLOB S_SYMBOLS "source/Analizator/Symbols/*.cpp")
 file(GLOB S_TOKENS "source/Analizator/Tokens/*.cpp")
 file(GLOB S_SOURCES "source/Sources/*.cpp")
+file(GLOB S_INTERPRETER "source/Analizator/Interpreter/*.cpp")
 file(GLOB S_GLOBAL "source/*.cpp")
-set(SOURCES ${S_ANALIZATOR} ${S_SYMBOLS} ${S_TOKENS} ${S_SOURCES} ${S_GLOBAL})
+set(SOURCES ${S_ANALIZATOR} ${S_SYMBOLS} ${S_TOKENS} ${S_SOURCES} ${S_INTERPRETER} ${S_GLOBAL})
 
 file(GLOB S_TESTS "source/Tests/*.cpp")
 file(GLOB S_PROGRAM_OPTIONS "source/ProgramOptions/*.cpp")
